<resources>
    <string name="app_name">My Restaurants</string>
    <string name="button_addRestaurant">Add Restaurant</string>
    <string name="hint_restaurantName">Restaurant name</string>
    <string name="hint_restaurantAddress">Address</string>
    <string name="hint_restaurantDescription">Description </string>
    <string name="hint_restaurantLastVisited">Last visited</string>
    <string name="menu_addRestaurant">Add</string>
    <string name="menu_cancelRestaurant">Cancel</string>
    <string name="menu_back">Back</string>
    <string name="enter_restaurantName"> Please enter name </string>
    <string name="save_restaurant"> Save Restaurant </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_restaurantImage">Select image</string>
    <string name="change_restaurantImage">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteRestaurant">Delete</string>
    <string name="title_activity_restaurants">Restaurants map </string>
</resources>